<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="bobbinsUrl">http://www.bobbinsmag.co.uk</string>
    <string name="app_name">County</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="editRepeat">How many rows in a pattern repeat?</string>
    <string name="repeatHelp">(0 = no repeat)</string>
    <string name="useLetters">Use Letters</string>
    <string name="useNumbers">Use Numbers</string>
    <string name="countUp">Count Up</string>
    <string name="countDown">Count Down</string>
    <string name="currentRowButtonLabelText">Row number represents:</string>
    <string name="showCurrentRow">Current Row</string>
    <string name="showLastCompletedRow">Last Completed Row</string>    
    <string name="ok">OK</string>
    <string name="rowsPerRepeat">Pattern repeat:</string>
    <string name="completedRepeats">Completed repeats:</string>
    <string name="totalRows">Total rows:</string>
    <string name="bobbinsAdText">Like this app? Like knitting? You might like:</string>
    <string name="increment">Increase</string>
    <string name="decrement">Decrease</string>
</resources>
