<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<Button android:id="@+id/ok"
		android:layout_width="45dp"
		android:layout_height="45dp"	
		android:layout_marginTop="1dp"
		android:layout_alignParentRight="true"	 
	  	android:layout_alignParentTop="true"
	  	android:text="@string/ok" />		
	    	    
	<EditText android:id="@+id/repeat" 
		android:layout_width="45dp"
		android:layout_height="45dp" 
		android:layout_toLeftOf="@id/ok"
		android:layout_marginTop="1dp"
		android:layout_alignParentTop="true"
		android:inputType="number"
		android:maxLines="1"
		android:maxLength="2"/>			    
    
    <TextView
    	android:id="@+id/editRepeatText"
	    android:layout_width="150dp"
	    android:layout_height="35dp"
	    android:layout_marginTop="15dp"
	    android:inputType="textMultiLine"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:layout_toLeftOf="@id/repeat"
	    android:text="@string/editRepeat" />

    <TextView
    	android:id="@+id/repeatHelpText"
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    android:layout_marginLeft="15dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/editRepeatText"
	    android:text="@string/repeatHelp" />
    
    <ToggleButton android:id="@+id/increment_button"
    	android:layout_width="wrap_content"
        android:layout_height="45dp"
    	android:layout_below="@id/editRepeatText"
    	android:layout_marginTop="1dp"
    	android:layout_alignParentRight="true"
    	android:layout_centerHorizontal="true"
        android:textOn="@string/countUp"
        android:textOff="@string/countDown"/>		

    <ToggleButton android:id="@+id/currentRowButton"
    	android:layout_width="wrap_content"
        android:layout_height="45dp"
    	android:layout_below="@id/increment_button"
    	android:layout_alignParentRight="true"    	
    	android:layout_marginTop="1dp"    	
    	android:layout_centerHorizontal="true"
        android:textOn="@string/showCurrentRow"
        android:textOff="@string/showLastCompletedRow"/>		

    <TextView
    	android:id="@+id/currentRowButtonLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="45dp"
	    android:gravity="center_vertical"
	    android:layout_alignParentLeft="true"
	    android:layout_marginRight="2dp"
	    android:layout_toLeftOf="@id/currentRowButton"
	    android:layout_below="@id/increment_button"	    
	    android:text="@string/currentRowButtonLabelText" />
	    
	<ImageView android:id="@+id/bobbins_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:src="@drawable/app_banner" />

    <TextView android:id="@+id/bobbinsAdText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_above="@id/bobbins_link"
	   	android:textStyle="italic"
	    android:textSize="12dp"
	    android:text="@string/bobbinsAdText" />
	    
	<TextView android:id="@+id/dashedLine"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent" 
	    android:layout_above="@id/bobbinsAdText"
	    android:background="@drawable/dashed_line"
	     />    
</RelativeLayout>